closing a string tag

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -345,7 +345,7 @@
     <string name="reminder_triggers_in">Verbleibende Zeit bis Alarm ausgelöst wird:\n%s</string>
     <string name="alarm_warning">Bitte stell sicher, dass der Alarm zuverlässig funktioniert, bevor Du Dich darauf verlässt. Es könnte wegen Systemeinschränkungen (z.B. Stromsparfunktion) fehlschlagen.</string>
     <string name="reminder_warning">Bitte stell sicher, dass die Erinnerung zuverlässig funktioniert, bevor Du Dich darauf verlässt. Es könnte wegen Systemeinschränkungen (z.B. Stromsparfunktion) fehlschlagen.</string>
-    <string name="notifications_disabled">Benachrichtigungen für diese App sind deaktiviert. Bitte geh in deine Systemeinstellungen und aktiviere sie.<string>
+    <string name="notifications_disabled">Benachrichtigungen für diese App sind deaktiviert. Bitte geh in deine Systemeinstellungen und aktiviere sie.</string>
 
     <!-- Alarms -->
     <string name="alarm">Wecker</string>
