--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -232,7 +232,7 @@
     <string name="no">否</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">警告: 你正在删除此目录</item>
+        <item quantity="one">WARNING: You are deleting %d folder</item>
         <item quantity="other">警告: 你正在删除 %d 目录</item>
     </plurals>
 
