--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -231,7 +231,7 @@
     <string name="no">否</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">注意: 你正在刪除1個資料夾</item>
+        <item quantity="one">WARNING: You are deleting %d folder</item>
         <item quantity="other">注意: 你正在刪除%d個資料夾</item>
     </plurals>
 
