--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -429,6 +429,12 @@
     <string name="empty_recycle_bin_confirmation">Ste si istý, že chcete vysypať odpadkový kôš? Súbory budú navždy stratené.</string>
     <string name="recycle_bin_empty">Odpadkový kôš je prázdny</string>
 
+    <plurals name="moving_items_into_bin">
+        <item quantity="one">%d položka sa presúva do odpadkového koša</item>
+        <item quantity="few">%d položky sa presúvajú do odpadkového koša</item>
+        <item quantity="other">%d položiek sa presúva do odpadkového koša</item>
+    </plurals>
+
     <!-- Import / Export -->
     <string name="importing">Importovanie…</string>
     <string name="exporting">Exportovanie…</string>
