--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -232,7 +232,7 @@
     <string name="no">Nej</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">ADVARSEL: Du sletter %d mappe</item>
+        <item quantity="one">ADVARSEL: Du sletter en mappe</item>
         <item quantity="other">ADVARSEL: Du sletter %d mapper</item>
     </plurals>
 
