--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -192,7 +192,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">Eliminar</string>
-    <string name="remove">Remove</string>
+    <string name="remove">Eliminar</string>
     <string name="rename">Renombrar</string>
     <string name="share">Compartir</string>
     <string name="share_via">Compartir con</string>
@@ -409,8 +409,8 @@
     <string name="recycle_bin_empty">La papelera está vacia</string>
 
     <plurals name="moving_items_into_bin">
-        <item quantity="one">Moving %d item into the Recycle Bin</item>
-        <item quantity="other">Moving %d items into the Recycle Bin</item>
+        <item quantity="one">Moviendo %d elemento a la papelera de reciclaje</item>
+        <item quantity="other">Moviendo %d elementos a la papelera de reciclaje</item>
     </plurals>
 
     <!-- Import / Export -->
