item quantity="one"

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -409,7 +409,7 @@
     <string name="recycle_bin_empty">Papirkurven er tom</string>
 
     <plurals name="moving_items_into_bin">
-        <item quantity="one">Flytter %d fil til papirkurven</item>
+        <item quantity="one">Flytter en fil til papirkurven</item>
         <item quantity="other">Flytter %d filer til papirkurven</item>
     </plurals>
 
